<resources>
    <string name="app_name">SkinSavvy</string>
    <string name="gallery">Galery</string>
    <string name="analyze">Analyze</string>
    <string name="image">Image</string>
    <string name="result_text">Prediction:%1$s \nConfidence  %2$.2f%% </string>
    <string name="text_main">Check Your Skin</string>
    <string name="text_main2">Results of Your Skin Analysis</string>
    <string name="simpan">Save</string>
    <string name="icon">Icon</string>
    <string name="selectimage">Select an image first.</string>
    <string name="failedimage">Failed to classify the image.</string>
    <string name="permissonacces">Permission Acces</string>
    <string name="permissondenied">Permission Denied! You cannot access gallery.</string>
    <string name="failedtofetch">Failed to fetch articles</string>
    <string name="text">News About Cancer</string>
    <string name="camera">Camera</string>
    <string name="aboutus">SkinSavvy adalah aplikasi gratis yang dirancang untuk membantu deteksi dini kanker kulit.
        aplikasi ini menyediakan alat untuk mengenali perubahan kulit yang berpotensi menjadi tanda awal kanker kulit.
        SkinSavvy meningkatkan kesadaran akan pentingnya pemeriksaan kulit mandiri dan mendorong konsultasi dengan profesional medis.
        Deteksi dini kanker kulit sangat penting, karena jika terdeteksi pada tahap awal, tingkat kesembuhannya sangat tinggi.
        SkinSavvy membantu pengguna mengidentifikasi tanda-tanda mencurigakan lebih awal, sehingga mereka dapat segera mencari saran medis.
        Meskipun aplikasi ini merupakan alat bantu yang berguna, diagnosis tetap harus dilakukan oleh tenaga kesehatan profesional.</string>

</resources>
